icon z-index bugfix & scrollbaarheid op home uitgezet

--- a/frontend/dumaco/src/components/button/button.module.css
+++ b/frontend/dumaco/src/components/button/button.module.css
@@ -25,6 +25,7 @@
     width: 20px;
     height: auto;
     user-select: none;
+    z-index: 0;
 }
 
 .iconWrapper {
