--- a/frontend/dumaco/src/components/navbar/navbar.module.css
+++ b/frontend/dumaco/src/components/navbar/navbar.module.css
@@ -10,6 +10,7 @@
 .navbar{
     background-color: #DADADA;
     height: 9vh;
+    z-index: 5;
 }
 
 .subnavbar {
@@ -18,6 +19,7 @@
     background-color: #ff3434 ;
     height: 4vh;
     padding-left: 1rem;
+    z-index: 5;
 }
 
 .navbar h1{
